<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/topBottomOuter"
    android:layout_marginLeft="@dimen/leftRightOuter"
    android:layout_marginRight="@dimen/leftRightOuter"
    android:layout_marginTop="@dimen/topBottomOuter"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/textViewQNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewTimeLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RelativeLayout
        android:id="@+id/rlImageViewWrapper"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/imgMaxHeight"
        android:layout_below="@id/textViewTimeLeft" >

        <ImageView
            android:id="@+id/imageViewAddOpt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_marginTop="60dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/ni"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/progressBarWrapper"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:visibility="gone" >

            <ProgressBar
                android:id="@+id/progressBar1"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:contentDescription="@string/progressBarTxt" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/progressBar1"
                android:layout_centerHorizontal="true"
                android:text="@string/progressBarTxt"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </RelativeLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/textViewQ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/rlImageViewWrapper"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rlBottomWrapper"
        android:layout_below="@id/textViewQ"
        android:fillViewport="false" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </RadioGroup>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/rlBottomWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_centerInParent="true" >

        <Button
            android:id="@+id/buttonQuitR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:onClick="quitBtnClicked"
            android:text="@string/quitBtnTxt" />

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:onClick="nextBtnClicked"
            android:text="@string/nextBtnTxt" />

    </RelativeLayout>

</RelativeLayout>